devops/k8s/db-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: mongodb
  labels:
    app: mongodb
spec:
  volumes:
    - name: mongo-storage
      persistentVolumeClaim:
        claimName: mongo-pvc
  containers:
    - name: mongodb
      image: mongo
      ports:
        - containerPort: 27017
          name: mongodb-port
      volumeMounts:
        - mountPath: /data/db
          name: mongo-storage
