devops/k8s/backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: panopli-back
spec:
  selector:
    matchLabels:
      app: panopli-back
  template:
    metadata:
      labels:
        app: panopli-back
    spec:
      containers:
        - name: panopli-back
          image: darkfidis/panopli:backend
          ports:
            - containerPort: 5000

---
apiVersion: v1
kind: Service
metadata:
  name: panopli-backend
spec:
  selector:
    app: panopli-back
  type: ClusterIP
  ports:
    - port: 5000
      targetPort: 5000
