devops/k8s/frontend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: panopli-next
spec:
  selector:
    matchLabels:
      app: panopli
  template:
    metadata:
      labels:
        app: panopli
    spec:
      containers:
        - name: panopli-next
          image: darkfidis/panopli:frontend
          ports:
            - containerPort: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: panopli-front
spec:
  selector:
    app: panopli
  type: NodePort
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 31001
