devops/k8s/server.yml
apiVersion: v1
kind: Pod
metadata:
  name: panopli-back
  labels:
    app: panopli-back
spec:
  containers:
    - name: panopli-back
      imagePullPolicy: "Always"
      image: darkfidis/panopli:backend
      ports:
        - containerPort: 5000

---
apiVersion: v1
kind: Service
metadata:
  name: panopli-backend
spec:
  selector:
    app: panopli-back
  type: ClusterIP
  ports:
    - port: 5000
      targetPort: 5000
